# jobchange

./: .dockerignore  .env.example  .gitignore  CUsersdandyAppDataLocalTemphokuto_pdf.txt  Dockerfile  index.html  pyproject.toml  register_startup.ps1  research.py  start_server.bat  sync-output.bat  アヤベックス株式会社_基本調査.md  アヤベックス株式会社_詳細調査.md  株式会社ナノコネクト_基本調査.md  株式会社ナノコネクト_詳細調査.md  株式会社千里眼_基本調査.md
.claude/: settings.local.json
functions/: [[catchall]].js
output/: index.html
output/2026-04-15_株式会社スペースシャワーネットワーク_v2/: dashboard.css  dashboard.html  dashboard.js  report_basic.md
output/2026-04-15_株式会社ナノコネクト/: dashboard.css  dashboard.html  dashboard.js  report_basic.md
output/2026-04-15_株式会社ナノコネクト_v2/: dashboard.css  dashboard.html  data.json  report_basic.md  report_detail.md
output/2026-04-15_株式会社千里眼_v2/: dashboard.html  dashboard.js  data.json  report_basic.md
output/2026-04-16_アヤベックス株式会社/: dashboard.html  data.json  report_basic.md  report_detail.md
output/2026-04-18_アクセンチュア株式会社/: dashboard.html  dashboard.js  report_basic.md  report_detail.md
output/2026-04-23_Trash Lens株式会社/: dashboard.css  dashboard.html  report_basic.md  report_detail.md
output/2026-04-23_株式会社エフ・シー・シー/: dashboard.html  (+2 more)
prompts/: basic_extension.md  job_fit_addendum.md
scripts/: build_index.py  render_dashboard.py
templates/: dashboard.html.j2
グリーン司法書士法人/: グリーン司法書士法人_基本調査.md  グリーン司法書士法人_詳細調査.md
株式会社スペースシャワーネットワーク/: 株式会社スペースシャワーネットワーク_基本調査.md  株式会社スペースシャワーネットワーク_詳細調査.md
株式会社ナノコネクト/: 株式会社ナノコネクト_基本調査.md  株式会社ナノコネクト_詳細調査.md
株式会社ムスび/: 株式会社ムスび_基本調査.md  株式会社ムスび_詳細調査.md
(+45 files in other folders)
